--- a/src/resources/postcss/views/skeleton/_single-event.pcss
+++ b/src/resources/postcss/views/skeleton/_single-event.pcss
@@ -126,8 +126,11 @@
 	.tribe-events-content {
 		
 		h2 {
-			margin-top: var(--spacer-7);
-			margin-bottom: var(--spacer-2);
+			margin-bottom: var(--spacer-1);
+			
+			@media (--viewport-medium) {
+				margin-bottom: var(--spacer-2);
+			}
 		}
 	}
 }
